@@ -3,6 +3,7 @@
 = 2.17.1 =
 * Fixed user_agents table is not deleted on cleanup.
 * Fixed an issue related to showing earnings for certain dates.
+* Improved the traffic queries which solves performance issues with large data sets.
 
 = 2.17.0 =
 * Added a new Traffic section with URI stats.
